Login, register, and video posting works

--- a/test/fixtures/videos.yml
+++ b/test/fixtures/videos.yml
@@ -2,12 +2,8 @@
 
 one:
   title: MyString
-  content: 1
-  description: MyText
-  user_id: 1
+  urlLink: MyString
 
 two:
   title: MyString
-  content: 1
-  description: MyText
-  user_id: 1
+  urlLink: MyString
