--- a/test/fixtures/games.yml
+++ b/test/fixtures/games.yml
@@ -3,9 +3,9 @@
 one:
   title: MyString
   summary: MyText
-  content: 1
+  gameLink: MyString
 
 two:
   title: MyString
   summary: MyText
-  content: 1
+  gameLink: MyString
